[package]
name = "bevy_rbrb"
version = "0.1.0"
edition = "2021"

authors = ["Shelby Doolittle <shelby@shelbyd.com>"]
description = "Bevy integration for RbRb"
license = "MIT"
repository = "https://github.com/shelbyd/bevy_rbrb"

[dependencies]
bevy_app = "0.5.0"
bevy_ecs = "0.5.0"
bevy_reflect = "0.5.0"
bincode = "1.3.3"
bson = "2.0.1"
log = "0.4.14"
rbrb = { version = "0.1.0", git = "https://github.com/shelbyd/rbrb" }
serde = { version = "1.0.130", features = ["derive"] }

[dev-dependencies]
bevy = "0.5.0"
bincode = "1.3.3"
structopt = "0.3.25"
